got tabs working correctly, now need to fix spacing of selected content

--- a/css/index.css
+++ b/css/index.css
@@ -342,6 +342,29 @@ footer .copywright p {
 .services-content {
   margin: 5% 8.5%;
 }
+.services-content .content-container {
+  margin: 5% 8.5%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.services-content .tab-content {
+  display: none;
+  width: 75%;
+}
+.services-content .tab-content .tab-content-text h3 {
+  margin: 5% 1% 5% 2%;
+}
+.services-content .tab-content .tab-content-text p {
+  margin: 0 0 5% 2%;
+}
+.services-content .selected-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .services-content .tab-container {
   display: flex;
   flex-direction: row;
@@ -360,22 +383,4 @@ footer .copywright p {
 .services-content .tab-container .tab-link:hover {
   color: #FFF;
   background-color: #5E9FB9;
-}
-.services-content .content-container {
-  margin: 5% 8.5%;
-}
-.services-content .content-container .tab-content .selected-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.services-content .content-container .tab-content h3 {
-  margin: 5% 1% 5% 2%;
-}
-.services-content .content-container .tab-content p {
-  margin: 0 0 5% 2%;
-}
-.services-content .content-container .tab-content-img {
-  margin: 8.2% 0% 5% 4%;
 }
