--- a/less/services.less
+++ b/less/services.less
@@ -15,58 +15,111 @@
 .services-intro {
   margin: 5% 8.5%;
 }
-
 .services-content {
+  margin: 5% 8.5%;
+  .content-container {
     margin: 5% 8.5%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;           
+    align-items: flex-end;
+  }
+  .tab-content {
+    display: none; 
+
+    width: 75%;
+    .tab-content-text{
+      h3 {
+        margin: 5% 1% 5% 2%;
+      }
+      p {
+        margin: 0 0 5% 2%;
+      }
+    }
+  }
+  .selected-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
   .tab-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    
     .tab-link {
       color: @text-color;
       background-color: @bg-color;
       border: 1px solid @text-color;
-      width: 160px;
+       width: 160px;
       text-align: center;
       padding: 2% 0;
       font-size: 2rem;
       font-weight: bold;
-
+    
       &:hover {
         color: @bg-color;
         background-color: @btn-bg-color;
+        }
       }
     }
-  }
-  .content-container {
-    margin: 5% 8.5%;
+  }   
 
-    .tab-content {
-        
 
-        .selected-content {
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-          align-items: flex-end;
-        }
+// .services-content {
+//     margin: 5% 8.5%;
+
+//   .tab-container {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+
+//     .tab-link {
+//       color: @text-color;
+//       background-color: @bg-color;
+//       border: 1px solid @text-color;
+//       width: 160px;
+//       text-align: center;
+//       padding: 2% 0;
+//       font-size: 2rem;
+//       font-weight: bold;
+
+//       &:hover {
+//         color: @bg-color;
+//         background-color: @btn-bg-color;
+//       }
+//     }
+//   }
+//   .content-container {
+//     margin: 5% 8.5%;
+//     display: none;
+
+//     .tab-content {
+       
+
+//         .selected-content {
+//           display: flex;
+//           flex-direction: row;
+//           justify-content: space-between;
+//           align-items: flex-end;
+//         }
         
        
 
-        h3 {
-            margin: 5% 1% 5% 2%;
-        }
-        p {
-            margin: 0 0 5% 2%;
-        }
-    }
-    .tab-content-img {
-        margin: 8.2% 0% 5% 4%;
-    }
-  }
-}
+//         h3 {
+//             margin: 5% 1% 5% 2%;
+//         }
+//         p {
+//             margin: 0 0 5% 2%;
+//         }
+//     }
+//     .tab-content-img {
+//         margin: 8.2% 0% 5% 4%;
+//     }
+//   }
+// }
 
 
 
